--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edit</title>
   <link rel="stylesheet" href="../css/copypage.css" />
+  <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" />
 
   <!--font awesome icons-->
